# Fuse-Nx

./: .clang-tidy  .gitignore  README.md  meson.build  meson_options.txt  pyproject.toml  setup.py
.github/workflows/: bindings.yml  build.yml  main.yml
bindings/: bindings.cpp  fnxbinds.pyi
bindings/fnx/: __init__.py  hac.py
include/: fnx.hpp
include/fnx/: crypto.hpp  hac.hpp  io.hpp  keyset.hpp  types.hpp  utils.hpp
include/fnx/formats/: base.hpp  hfs.hpp  nca.hpp  pfs.hpp  romfs.hpp  xci.hpp
lib/: crypto.cpp  hfs.cpp  io.cpp  keyset.cpp  meson.build  nca.cpp  pfs.cpp  romfs.cpp  xci.cpp
scripts/: dump_sdk_nso.py  list_nsp.py  show_xci_icon.py
src/: containers.cpp  containers.hpp  context.hpp  dump.cpp  dump.hpp  find.cpp  find.hpp  fuse.cpp  fuse.hpp  keys.cpp  keys.hpp  list.cpp  list.hpp  main.cpp  meson.build  options.hpp  thread_pool.hpp  utils.hpp  vfs.cpp  vfs.hpp
subprojects/: CLI11.wrap  mbedtls.wrap  re2.wrap
